working with show

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
         <script src="javascript/app.js"></script>
         <script src="javascript/routes.js"></script>
+        <script src="javascript/controllers/notes-create-controller.js"></script>
+        <script src="javascript/controllers/notes-edit-controller.js"></script>
+        <script src="javascript/controllers/notes-index-controller.js"></script>
+        <script src="javascript/controllers/notes-show-controller.js"></script>
     </body>
 </html>
