--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <script src="javascript/controllers/notes-index-controller.js"></script>
     <script src="javascript/controllers/notes-show-controller.js"></script>
     <script src="javascript/directives/nw-card.js"></script>
+    <script src="javascript/directives/markdown-html.js"></script>
+    <script src="javascript/services/note.js"></script>
 </body>
 
 </html>
