working with provider again

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="javascript/directives/nw-card.js"></script>
     <script src="javascript/directives/markdown-html.js"></script>
     <script src="javascript/services/note.js"></script>
+    <script src="javascript/services/gravatar.js"></script>
 </body>
 
 </html>
